# python-template

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  constants.py  constraints.py  embed.py  main.py  pyproject.toml  spline.py  train_constraint_aware_encoder.py
.github/workflows/: ci.yml
figures/: figure_1.py
scripts/: setup-claude.sh
tests/: test_my_project.py
