[project]
name = "biolens"
version = "0.1.0"
description = "Implementation of BioLENS MVP"
readme = "README.md"
requires-python = ">=3.12, <3.13" 
dependencies = [
  "matplotlib==3.10.8",
  "scikit-learn==1.8.0",
  "seaborn==0.13.2",
  "torch==2.10.0",
  "lightning==2.6.1"
]

[dependency-groups]
dev = [
  "ruff>=0.6.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true