[project]
name = "my_project"
version = "0.1.0"
description = "<brief project description>"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
  "python-dotenv>=1.0.0"
]

[dependency-groups]
dev = [
  "ruff>=0.6.0",
  "pre-commit>=3.0.0",
  "pytest>=8.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]